# stopnow_c_plus_plus

./: CMakeLists.txt  Clock.cpp  GUIShell.cpp  IdleTime.cpp  OptionsRead.cpp  PluginManager.cpp  PythonPlugin.cpp  Structs.cpp  Timer.cpp  cpptopython.py
doc/: Doxyfile
include/: ErrCodes.h  GUI.h  Structs.h  Timer.h
include/impl/: GUIShell.h
include/plugin/: Plugin.h  PluginManager.h  PythonPlugin.h
include/windows/: WindowsCalls.h
lib/: Clock.h
tests/: CMakeLists.txt  StructsTest.cpp  TestRunner.cpp
